[package]
name = "rust-link-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }

async-trait = "0.1.68"
log = "0.4.17"
env_logger = "0.10.0"

lazy_static = "1.4.0"
timeit = "0.1.2"
async-channel = "1.9.0"
poem = {version = "1.3.58", features = ["compression"]}
tracing-subscriber = "0.3.17"
poem-openapi = {version = "3.0.4", features = ["swagger-ui"]}
tracing = "0.1.37"

rusqlite = { version = "0.32.0", features = ["bundled"] }

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[profile.release]
lto = true
opt-level = "z"

